# B.34.-BPAAOW-ros-darwin

./: LICENSE  README.md  darwin_description.rosinstall  justfile  model.config  package.xml
extras/: arm_basic_low.scad  arm_basic_low_l.scad  body_coll_simple.scad  head_coll_simple.scad
launch/: gazebo.launch  gazebo_test.launch  rviz-with-gazebo.launch  rviz.launch
meshes/: body_coll_simple.stl
urdf/: darwin.urdf
worlds/: empty.world
