<?xml version="1.0" encoding="UTF-8"?>
<package>
  <name>darwin_description</name>
  <version>1.0.0</version>
  <description>Describes DarwinOP robot model with camera plugin and accelerometer plugin (hector) for Gazebo</description>
  <maintainer email="eriol@mornie.org">Daniele Tricoli</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/eriol/darwin_description</url>
  <author email="tk375@drexel.edu">Taegoo Kim, Bharadwaj Ramesh</author>
  <author email="pc@humarobotics.com">Philippe Capdepuy</author>
  <author email="eriol@mornie.org">Daniele Tricoli</author>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
